[package]
name = "luna"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
extract-frontmatter = "2.1.0"
microtemplate = "1.0.3"
tiny_http = "0.9.0"
ascii = "1.0"
markdown = "0.3.0"
tini = "1.1"
pico-args = "0.4.2"
include_dir = "0.6.2"
dircpy = "0.3.8"
walkdir = "2"
slug = "0.1.4"